bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_tree_event_pane_lines.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ build the project                                                                              │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"             ⎿ 1 step · bash ×1                                                                     "
"                                                                                                    "
" ╭──────────────────╭commands (narrow) — 4 items───────────────────────────────╮──────────────────╮ "
" │ Done.            │╭commands────────────────────────────────────────────────╮│                  │ "
" ╰──────────────────││  <user> build the project                         #1   ││──────────────────╯ "
"                    ││  bash make -j4                                    #2   ││                    "
"                    ││  bash ok All targets up to date                   #3   ││                    "
"                    ││  <assistant> Done.                                #4   ││                    "
"                    │╰────────────────────────────────────────────────────────╯│                    "
"                    │                                                          │                    "
"                    │╭<user> build the project────────────────────────────────╮│                    "
"                    ││build the project                                       ││                    "
"                    ││                                                        ││                    "
"                    ││Enter offers the four options (View-only, Rewind        ││                    "
"                    ││without summary, Summarize the branch, Summarize with   ││                    "
"                    ││custom prompt).                                         ││                    "
"                    ││                                                        ││                    "
"                    │╰────────────────────────────────────────────────────────╯│                    "
"                    │:  [f: full] · enter ok · esc close · ctrl-j/k move · ctrl│                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
" ╭[INSERT]────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                                                                                                │ "
" │                                                                                                │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · Tab · PgUp/Dn         "
