bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_turn_fold_cursor_remap.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
"   1╭User────────────────────────────────────────────────────────────────────╮▶ "
"   1│ first question                                                         │█ "
"   2╰────────────────────────────────────────────────────────────────────────╯█ "
"   3            ⎿ 1 step · bash ×1 · 1 msg                                    █ "
"   4                                                                          █ "
"   5╭────────────────────────────────────────────────────────────────────────╮█ "
"   6│ final one                                                              │█ "
"   7╰────────────────────────────────────────────────────────────────────────╯█ "
"   8                                                                          █ "
"   9╭User────────────────────────────────────────────────────────────────────╮█ "
"  10│ second question                                                        │█ "
"  11╰────────────────────────────────────────────────────────────────────────╯█ "
"  12            ⎿ 1 step · mymcp__ext ×1 · 1 msg                              █ "
"  13                                                                          █ "
"  14╭────────────────────────────────────────────────────────────────────────╮█ "
"  15│ final two                                                              │█ "
"  16╰────────────────────────────────────────────────────────────────────────╯█ "
"                                                                              ▼ "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  fold: z + a o c A R M j k                                                     "
